--- a/localization/ephys_probe_localization.ipynb
+++ b/localization/ephys_probe_localization.ipynb
@@ -127,6 +127,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c827c229-1845-42ce-84f0-24249600fc83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print()\"a\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "9b83d81b-d5a9-465b-9458-24c0c83c37ec",
    "metadata": {
@@ -487,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
